--- a/gnome-shell/gnome-shell-sass/_extensions.scss
+++ b/gnome-shell/gnome-shell-sass/_extensions.scss
@@ -100,10 +100,10 @@ $panel_color: transparentize(black, 0.5);
   $_bib: 1 1 0 3; // bottom
   $_bit: 1 1 3 0; // top
   #dashtodockContainer {
-    background-color: $panel_color;
     border-radius: 0;
 
     &.#{$p}.extended {
+      @extend %panel_fix;
       @if $p==left { box-shadow: $_panel_left; }
       @else if $p==right { box-shadow: $_panel_right; }
       @else if $p==bottom { box-shadow: $_panel_bottom; }
@@ -114,6 +114,7 @@ $panel_color: transparentize(black, 0.5);
     &.dashtodock #dash {
       border: none !important;
       padding: 0px;
+      background-color: $panel_color;
     }
 
     &.extended {
@@ -232,6 +233,7 @@ $panel_color: transparentize(black, 0.5);
 
     &.#{$p} #dash .app-well-app {
       &:hover {
+        transition-duration: 100ms;
         @if $p==left { border-image: url('running1-left-inactive-hover.svg') $_bil; }
         @else if $p==right { border-image: url('running1-right-inactive-hover.svg') $_bir; }
         @else if $p==bottom { border-image: url('running1-bottom-inactive-hover.svg') $_bib; }
