--- a/gtk-3.0/_variables.scss
+++ b/gtk-3.0/_variables.scss
@@ -4,6 +4,7 @@ $br_w: 2px; // Rounded corners on decorations
 $circular_radius: 99px;
 
 // duration
+$shortest_duration: 100ms;
 $shorter_duration: 150ms;
 $longer_duration: 250ms;
 
