--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -1460,7 +1460,7 @@ decoration:backdrop { box-shadow: 0 4px 4px 3px transparent, 0 1px 2px 1px rgba(
 
 .maximized decoration, .fullscreen decoration, .tiled decoration, .tiled-top decoration, .tiled-right decoration, .tiled-bottom decoration, .tiled-left decoration { border-radius: 0; }
 
-.popup decoration { box-shadow: none; }
+.maximized decoration, .fullscreen decoration, .popup decoration { box-shadow: none; }
 
 decoration .ssd { border-radius: 2px 2px 0 0; border: none; }
 
