--- a/gnome-shell/gnome-shell-sass/_extensions.scss
+++ b/gnome-shell/gnome-shell-sass/_extensions.scss
@@ -45,12 +45,6 @@ $panel_color: transparentize(black, 0.5);
     &.dashtopanel#{$o} {
       @if $o==Bottom { box-shadow: $_panel_bottom; }
       @else if $o==Top { box-shadow: $_panel_top; }
-
-      .app-well-app:hover .overview-icon {
-        @extend %panel_fix;
-        @if $o==Bottom { box-shadow: $_hover_effect_bottom; }
-        @else if $o==Top { box-shadow: $_hover_effect_top; }
-      }
     }
   }
 
@@ -66,18 +60,19 @@ $panel_color: transparentize(black, 0.5);
   @each $d in hover, focus, active, overview {
     .show-apps .overview-icon {
       background-image: url("d2p-activities.svg");
-      background-position: center top;
+      background-position: center center;
       border: none;
       color: transparent;
       border-radius: 0;
       margin: 0;
+      transition-duration: 100ms;
     }
 
     // FIXME: The icon in the overview is still showing
     .show-apps:#{$d} .overview-icon {
       background-image: url("d2p-activities-active.svg");
       background-color: $panel_color;
-      background-position: center top;
+      background-position: center center;
       color: transparent;
     }
   }
