--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -990,17 +990,13 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #LookingGlassPropertyInspector { background: rgba(0, 0, 0, 0.8); border: 2px solid grey; border-radius: 0; padding: 6px; }
 
-#panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon, #panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon, #dashtodockContainer.left.extended, #dashtodockContainer.left #dash .app-well-app:active .overview-icon, #dashtodockContainer.left #dash .app-well-app:focus .overview-icon, #dashtodockContainer.left #dash .app-well-app:selected .overview-icon, #dashtodockContainer.right.extended, #dashtodockContainer.right #dash .app-well-app:active .overview-icon, #dashtodockContainer.right #dash .app-well-app:focus .overview-icon, #dashtodockContainer.right #dash .app-well-app:selected .overview-icon, #dashtodockContainer.bottom.extended, #dashtodockContainer.bottom #dash .app-well-app:active .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:focus .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:selected .overview-icon, #dashtodockContainer.top.extended, #dashtodockContainer.top #dash .app-well-app:active .overview-icon, #dashtodockContainer.top #dash .app-well-app:focus .overview-icon, #dashtodockContainer.top #dash .app-well-app:selected .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; }
+#dashtodockContainer.left.extended, #dashtodockContainer.left #dash .app-well-app:active .overview-icon, #dashtodockContainer.left #dash .app-well-app:focus .overview-icon, #dashtodockContainer.left #dash .app-well-app:selected .overview-icon, #dashtodockContainer.right.extended, #dashtodockContainer.right #dash .app-well-app:active .overview-icon, #dashtodockContainer.right #dash .app-well-app:focus .overview-icon, #dashtodockContainer.right #dash .app-well-app:selected .overview-icon, #dashtodockContainer.bottom.extended, #dashtodockContainer.bottom #dash .app-well-app:active .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:focus .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:selected .overview-icon, #dashtodockContainer.top.extended, #dashtodockContainer.top #dash .app-well-app:active .overview-icon, #dashtodockContainer.top #dash .app-well-app:focus .overview-icon, #dashtodockContainer.top #dash .app-well-app:selected .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; }
 
 #panel.dashtopanelMainPanel { background-gradient-direction: vertical; background-gradient-start: rgba(0, 0, 0, 0.5); background-gradient-end: rgba(0, 0, 0, 0.5); }
 
 #panel.dashtopanelMainPanel.dashtopanelBottom { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
 
-#panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.8); }
-
 #panel.dashtopanelMainPanel.dashtopanelTop { box-shadow: inset 0 3px rgba(0, 0, 0, 0.4); }
-
-#panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon { box-shadow: inset 0 3px rgba(255, 255, 255, 0.8); }
 
 #panel.dashtopanelMainPanel .panel-button { text-shadow: black 0 1px 1px; }
 
@@ -1010,21 +1006,21 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #panel.dashtopanelMainPanel .dash-item-container > * { padding: 0 4px; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center center; border: none; color: transparent; border-radius: 0; margin: 0; transition-duration: 100ms; }
 
-#panel.dashtopanelMainPanel .show-apps:hover .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps:hover .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center center; color: transparent; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center center; border: none; color: transparent; border-radius: 0; margin: 0; transition-duration: 100ms; }
 
-#panel.dashtopanelMainPanel .show-apps:focus .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps:focus .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center center; color: transparent; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center center; border: none; color: transparent; border-radius: 0; margin: 0; transition-duration: 100ms; }
 
-#panel.dashtopanelMainPanel .show-apps:active .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps:active .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center center; color: transparent; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center center; border: none; color: transparent; border-radius: 0; margin: 0; transition-duration: 100ms; }
 
-#panel.dashtopanelMainPanel .show-apps:overview .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps:overview .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center center; color: transparent; }
 
 #panel.dashtopanelMainPanel > #panelRight { box-shadow: inset 1px 0 rgba(0, 0, 0, 0.5); }
 
