--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -1030,9 +1030,15 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { border-radius: 0; }
 
+#dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
+
+#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
+
+#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+
 #dashtodockContainer.left.extended { box-shadow: inset 3px 0 rgba(0, 0, 0, 0.4); }
 
-#dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
+#dashtodockContainer.shrink.left #dash, #dashtodockContainer.dashtodock.left #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
@@ -1084,7 +1090,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.left #dash .app-well-app .overview-icon { margin: 0; }
 
-#dashtodockContainer.left #dash .app-well-app.focused .overview-icon { background-gradient-direction: horizontal; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
+#dashtodockContainer.left #dash .app-well-app.focused .overview-icon { border-radius: 0; border-image: url("transparent.png"); }
 
 #dashtodockContainer.left #dash .app-well-app:hover .overview-icon { background: none; }
 
@@ -1092,9 +1098,15 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { border-radius: 0; }
 
+#dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
+
+#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
+
+#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+
 #dashtodockContainer.right.extended { box-shadow: inset -3px 0 rgba(0, 0, 0, 0.4); }
 
-#dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
+#dashtodockContainer.shrink.right #dash, #dashtodockContainer.dashtodock.right #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
@@ -1146,7 +1158,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.right #dash .app-well-app .overview-icon { margin: 0; }
 
-#dashtodockContainer.right #dash .app-well-app.focused .overview-icon { background-gradient-direction: horizontal; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
+#dashtodockContainer.right #dash .app-well-app.focused .overview-icon { border-radius: 0; border-image: url("transparent.png"); }
 
 #dashtodockContainer.right #dash .app-well-app:hover .overview-icon { background: none; }
 
@@ -1154,9 +1166,15 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { border-radius: 0; }
 
+#dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
+
+#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
+
+#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+
 #dashtodockContainer.bottom.extended { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
 
-#dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
+#dashtodockContainer.shrink.bottom #dash, #dashtodockContainer.dashtodock.bottom #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
@@ -1208,7 +1226,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.bottom #dash .app-well-app .overview-icon { margin: 0; }
 
-#dashtodockContainer.bottom #dash .app-well-app.focused .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
+#dashtodockContainer.bottom #dash .app-well-app.focused .overview-icon { border-radius: 0; border-image: url("transparent.png"); }
 
 #dashtodockContainer.bottom #dash .app-well-app:hover .overview-icon { background: none; }
 
@@ -1216,9 +1234,15 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { border-radius: 0; }
 
+#dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
+
+#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
+
+#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+
 #dashtodockContainer.top.extended { box-shadow: inset 0 3px rgba(0, 0, 0, 0.4); }
 
-#dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
+#dashtodockContainer.shrink.top #dash, #dashtodockContainer.dashtodock.top #dash { border: none !important; padding: 0px; background-color: rgba(0, 0, 0, 0.5); }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
@@ -1270,7 +1294,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.top #dash .app-well-app .overview-icon { margin: 0; }
 
-#dashtodockContainer.top #dash .app-well-app.focused .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
+#dashtodockContainer.top #dash .app-well-app.focused .overview-icon { border-radius: 0; border-image: url("transparent.png"); }
 
 #dashtodockContainer.top #dash .app-well-app:hover .overview-icon { background: none; }
 
