--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -56,7 +56,7 @@ label:disabled { color: #8d8d8c; }
 
 label:disabled:backdrop { color: #b9b9b5; }
 
-.dim-label, label.separator, .titlebar:not(headerbar) .subtitle, headerbar .subtitle { opacity: 0.55; text-shadow: none; }
+.dim-label, label.separator, .titlebar:not(headerbar) .subtitle, headerbar .subtitle { opacity: 0.6; text-shadow: none; }
 
 assistant .sidebar { background-color: #FFFFFF; border-top: 1px solid #b9b9b5; }
 
@@ -560,7 +560,7 @@ headerbar button:backdrop { color: #8d8d8c; }
 
 headerbar button:backdrop:hover { color: #ffffff; }
 
-headerbar entry { color: #f2f1f0; background-color: #737373; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.16); border-color: transparent; }
+headerbar entry { color: #f2f1f0; background-color: #737373; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.16); border-color: transparent; caret-color: #f2f1f0; }
 
 headerbar entry:focus { border-color: #fb6f55; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22), 0 0 0 1px rgba(251, 111, 85, 0.3), 0 0 0 2px rgba(251, 111, 85, 0.1); }
 
@@ -672,6 +672,8 @@ menubar, .menubar { -GtkWidget-window-dragging: true; padding: 0px; background-c
 menubar > menuitem, .menubar > menuitem { min-height: 16px; padding: 2px 8px; border: 0; border-color: transparent; color: #ffffff; }
 
 menubar > menuitem:hover, menubar > menuitem:active, .menubar > menuitem:hover, .menubar > menuitem:active { box-shadow: inset 0 -2px #fb6f55; color: #ffffff; border-radius: 0; background-color: #717171; }
+
+menubar > menuitem:backdrop, .menubar > menuitem:backdrop { color: #8d8d8c; }
 
 menubar > menuitem:disabled, .menubar > menuitem:disabled { color: #8d8d8c; box-shadow: none; }
 
@@ -793,7 +795,7 @@ notebook > header > tabs > arrow:hover:not(:active):not(:backdrop) { background-
 
 notebook > header > tabs > arrow:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
-notebook > header tab { min-height: 20px; min-width: 20px; padding: 2px 10px; outline-offset: -4px; color: #8d8d8c; font-weight: bold; border-width: 1px; border-color: transparent; }
+notebook > header tab { min-height: 24px; min-width: 24px; padding: 2px 10px; outline-offset: -4px; color: #8d8d8c; font-weight: bold; border-width: 1px; border-color: transparent; }
 
 notebook > header tab:hover { color: #656564; }
 
@@ -926,6 +928,16 @@ switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.5); }
 switch:checked slider { background-color: #fb6f55; color: #3C3C3C; box-shadow: none; }
 
 switch:checked:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.3); }
+
+row:selected switch:checked { background-color: rgba(253, 195, 185, 0.5); }
+
+row:selected switch:checked slider { background-color: white; }
+
+row:selected switch:hover slider { box-shadow: 0 0 0 6px rgba(253, 195, 185, 0.3); }
+
+row:selected switch:focus slider { box-shadow: 0 0 0 6px rgba(253, 195, 185, 0.4); }
+
+row:selected switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(253, 195, 185, 0.5); }
 
 /************************* Check and Radio items * */
 .view.content-view.check:not(list), iconview.content-view.check:not(list), .content-view .tile check:not(list) { -gtk-icon-shadow: none; -gtk-icon-source: -gtk-scaled(url("assets/checkbox-selectionmode.png"), url("assets/checkbox-selectionmode@2.png")); background-color: transparent; min-width: 40px; min-height: 40px; background-image: none; transition: none; box-shadow: none; border-width: 0; }
@@ -1777,3 +1789,7 @@ window.background.chromium button { border-color: #b9b9b5; }
 .thunar toolbar { border-bottom: 1px solid #b9b9b5; }
 
 .nemo-window .nemo-window-pane widget.entry { border: 1px solid; border-radius: 2px; border-color: #fb6f55; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22), 0 0 0 1px rgba(251, 111, 85, 0.3), 0 0 0 2px rgba(251, 111, 85, 0.1); }
+
+.gedit-search-slider button, .gedit-search-slider button:hover { box-shadow: none; border: 1px solid #b9b9b5; }
+
+.gedit-search-slider button:last-child, .gedit-search-slider button:hover:last-child { border-left: 0; }
